2005-11-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* src/Makefile.am:
	Fix pkgconfig deps for separate build roots.

2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC2 release.

2005-11-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* src/Makefile.am:
	Update pkgcheck dependencies to work with separate build roots.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.

2005-10-12  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	* man/Makefile.am: 
	Use sed to fill in variables in man page
	Add shadow man pages for man pages that document multiple functions.
	
2005-07-08  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* man/.cvsignore:
	* src/.cvsignore:
	* src/Makefile.am:
	Add .cvsignore files
	Switch _la_CFLAGS for AM_CFLAGS to clean up directory

2005-06-09  Alexander Gottwald  <ago@freedesktop.org>

	* configure.ac: 
	Require renderproto instead of render for pkgconfig

2005-01-16  Chris Larson <kergoth@handhelds.org>

	* configure.ac: Fix to work with automake 1.9.x.

2004-09-19  Carlos Romero  <kidcrash@freedesktop.org>

	* Makefile.am:
	Include man pages in EXTRA_DIST.

2004-02-03  Jim Gettys  <jg@freedesktop.org>

	* AUTHORS: Get a author's list.

2004-01-15  Daniel Stone  <daniel@fooishbar.org>
	* Tag release 1.0.2 for first freedesktop.org clientside lib release.

2004-01-15  Harold L Hunt II <huntharo@msu.edu>
	* Makefile.am: Pass -no-undefined to libtool via LDFLAGS.  Add
	-lXext and -lXrender to LIBADD.

2003-06-12 07:12  eich

	* Xrandr.man:  214. Changed any occurance of x86_64 to AMD64, the
	official name of the
	      architecture (Egbert Eich).
	 213. Removed Copyright sign from man pages as this causes some
	formatters
	      to choke (Egbert Eich).

2003-05-29 14:48  herrb

	* Xrandr.man: Fix manual pages typos (Bugzilla #316, Jens