@@ -32,7 +32,7 @@ dnl try to keep these the same.  Note that the library has an extra
 dnl digit in the version number to track changes which don't affect the
 dnl protocol, so Xrandr version l.n.m corresponds to protocol version l.n
 dnl
-AC_INIT(libXrandr, 0.99.2, [https://bugs.freedesktop.org/enter_bug.cgi?product=xorg], libXrandr)
+AC_INIT(libXrandr, 1.1.0, [https://bugs.freedesktop.org/enter_bug.cgi?product=xorg], libXrandr)
 AC_CONFIG_AUX_DIR(.)
 AM_INIT_AUTOMAKE([dist-bzip2])
 AM_MAINTAINER_MODE
@@ -52,7 +52,8 @@ AC_SUBST(X_LIBS)
 # find the required protocol version
 
 RANDR_VERSION=[`echo $VERSION | sed 's/^\([0-9][0-9]*\.[0-9][0-9]*\).*$/\1/'`]
-PKG_CHECK_MODULES(RANDR, randrproto >= $RANDR_VERSION xext xrender renderproto)
+AC_SUBST(RANDR_VERSION)
+PKG_CHECK_MODULES(RANDR, randrproto >= $RANDR_VERSION xext xextproto xrender renderproto)
 AC_SUBST(RANDR_CFLAGS)
 AC_SUBST(RANDR_LIBS)
 
